Fixed button gap, changed to grid. Made options clicking toggle

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -156,7 +156,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    padding: 3% 5%;
+    padding: 2% 5%;
   }
 
   .Sun-logo {
